# CV-tasks

./: .gitignore  Task2.odt
task1/: CMakeLists.txt  Coefficient_Matrix.txt  Eigen_Faces_Matrix.7z  Eigen_Faces_Matrix.tar.xz  FiltersPage.cpp  FreqPage.cpp  HistogramPage.cpp  HybridPage.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Report.md  Report.odt  catjpeg  main.cpp  roc-data.txt  roc.py
task1/Pages/: FiltersPage.cpp  FreqPage.cpp  HistogramPage.cpp  HybridPage.cpp  SegmentationPage.cpp  SnakePage.cpp  TemplateMatching.cpp
task1/includes/: Image.h  filters.h  histogram.h  stb_image.h  stb_image_write.h  utilities.h
task1/plotlib/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
task1/processing/: CMakeLists.txt
task1/processing/include/: Image.h  filters.h  fourier_transform.h  histogram.h  stb_image.h  utilities.h
task1/processing/src/: Image.cpp  filters.cpp  histogram.cpp  utilities.cpp
task1/processinglib/: CMakeLists.txt  export_header.cmake
task1/processinglib/include/: stb_image.h  utilities.h
task1/processinglib/include/processinglib/: Image.h  _Point.h  agglomerative_cluster_segmentation.h  canny.h  face_detection_opencv.h  face_recognition.h  filters.h  greedy_snake.h  growing_region.h  harris_corner_detector.h  histogram.h  hough.h  imageMatching.h  k_mean_segmentation.h  mean_shift.h  point.h  stb_image.h  stb_image_write.h  thresholding.h  utilities.h
task1/processinglib/include/processinglib/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  SPQRSupport  SVD  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  UmfPackSupport
task1/processinglib/include/processinglib/Eigen/src/Core/: ArrayBase.h  DenseBase.h  MatrixBase.h
task1/processinglib/include/processinglib/Eigen/src/SparseCore/: SparseMatrixBase.h
task1/processinglib/src/: Image.cpp  _Point.cpp  agglomerative_cluster_segmentation.cpp  canny.cpp  face_detection_opencv.cpp  face_recognition.cpp  filters.cpp  fourier_transform.cpp  greedy_snake.cpp  growing_region.cpp  harris_corner_detector.cpp  histogram.cpp  hough.cpp  imageMatching.cpp  k_mean_segmentation.cpp  mean_shift.cpp  point.cpp  thresholding.cpp  utilities.cpp
task1/src/: Image.cpp  filters.cpp  histogram.cpp  main.cpp  utilities.cpp
