include(export_header.cmake)
SET(LIB_NAME processing)
include_directories(include)
add_library(${LIB_NAME} src/Image.cpp src/filters.cpp src/utilities.cpp  src/histogram.cpp)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries( ${LIB_NAME} ${OpenCV_LIBS} )
export_headers(${LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/include/${LIB_NAME})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/include)
#target_include_directories(${LIB_NAME} PUBLIC include)