include(export_header.cmake)
SET(LIB_NAME processinglib)
include_directories(include)
add_library(${LIB_NAME} src/Image.cpp src/filters.cpp src/utilities.cpp src/histogram.cpp src/fourier_transform.cpp)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
find_library(FFTW NAMES libfftw3.so.3) # kimo
#find_library(FFTW NAMES libfftw3.a)
target_link_libraries(${LIB_NAME} ${OpenCV_LIBS} ${FFTW})
export_headers(${LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/include/${LIB_NAME})
target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/include)
#target_include_directories(${LIB_NAME} PUBLIC include)